crates/graphcal-eval/tests/snapshots/error_snapshots__error_bad_const_casing.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unexpected token `identifier `BAD_NAME``
    Diagnostic severity: error
Begin snippet for bad_const_casing.gcl starting at line 1, column 1

snippet line 1: // Bad const casing: const node must be lower_snake_case
snippet line 2: const node BAD_NAME: Dimensionless = 1.0;
    label at line 2, columns 12 to 19: here
diagnostic help: expected lower_snake_case identifier
diagnostic code: graphcal::P001
