crates/graphcal-eval/tests/snapshots/error_snapshots__error_bad_param_casing.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
unexpected token `identifier `BadName``
    Diagnostic severity: error
Begin snippet for bad_param_casing.gcl starting at line 1, column 1

snippet line 1: // Bad param casing: param must be lower_snake_case
snippet line 2: param BadName: Dimensionless = 1.0;
    label at line 2, columns 7 to 13: here
diagnostic help: expected lower_snake_case identifier
diagnostic code: graphcal::P001
