crates/graphcal-eval/tests/snapshots/error_snapshots__error_complex_aggregation_unsupported.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected indexed quantity collection, found Complex<Length>
    Diagnostic severity: error
Begin snippet for complex_aggregation_unsupported.gcl starting at line 5, column 1

snippet line 5: };
snippet line 6: node invalid: Complex<Length> = sum(@values);
    label at line 6, columns 37 to 43: has dimension Complex<Length>
diagnostic help: sum() requires every indexed element to be quantity
diagnostic code: graphcal::D001
